# documentation-downloader

./: .env.example  .gitignore  .verification  CONTRIBUTING.md  ENHANCEMENTS.md  LICENSE  PRE_RELEASE_CHECKLIST.md  QUICK_START.md  README.md  __init__.py  app.py  demo.py  doc_scraper.py  main.py  prepare_git.sh  pyproject.toml  requirements.txt  run.py  setup.py  setup_dev.sh  start_app.py  test_app.py  test_enhanced.py  version.py
docs/: CHANGELOG.md  FIXES.md  IDE_CONFIGURATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md
scripts/: setup_dev.sh
setup/: README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/core/: __init__.py  config.py  doc_scraper.py
src/web/: __init__.py  main.py
src/web/templates/: index.html
temp/: .gitkeep
