[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documentation-downloader"
dynamic = ["version"]
authors = [
    {name = "Documentation Downloader Team", email = "contact@documentation-downloader.com"},
]
description = "A FastAPI web application for downloading and converting documentation to PDF or Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["documentation", "pdf", "markdown", "scraping", "fastapi", "web", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "aiofiles>=23.2.1",
    "markdownify>=0.11.6",
    "python-slugify>=8.0.1",
    "reportlab>=4.0.4",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/summersbod/documentation-downloader"
"Bug Reports" = "https://github.com/summersbod/documentation-downloader/issues"
Source = "https://github.com/summersbod/documentation-downloader"
Documentation = "https://github.com/summersbod/documentation-downloader#readme"

[project.scripts]
doc-downloader = "app:main"

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web = ["templates/*.html", "static/*"]

# Typing configuration for improved IDE support
[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "**/.git",
    "**/temp"
]
extraPaths = ["src"]
pythonVersion = "3.8"
typeCheckingMode = "basic"

[tool.pylance]
extraPaths = ["src"]